--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -31,7 +31,7 @@
         android:layout_marginStart="15dp"
         android:layout_marginEnd="15dp"
         android:background="@drawable/boton_modifcado"
-        android:enabled="false"
+        android:enabled="true"
         android:text="SALVAR CONTACTO"
         android:textColor="#000000"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -65,7 +65,7 @@
         android:layout_marginStart="15dp"
         android:layout_marginEnd="15dp"
         android:ems="10"
-        android:enabled="false"
+        android:enabled="true"
         android:hint="TELEFONO"
         android:inputType="phone"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -119,7 +119,7 @@
         android:layout_marginStart="15dp"
         android:layout_marginEnd="15dp"
         android:ems="10"
-        android:enabled="false"
+        android:enabled="true"
         android:hint="NOMBRE"
         android:inputType="textPersonName"
         app:layout_constraintBottom_toBottomOf="parent"
